--- a/public/style.css
+++ b/public/style.css
@@ -100,7 +100,10 @@ h5 {
 }
 
 @media (max-width: 568px) {
-    h1,
+    h1 {
+        font-size: x-large;
+        margin-bottom: 10px;
+    }
     h2,
     h3,
     h4,
